2008-04-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/DocumentStateTracker.cs: Move document
	  state tracking logic from CSharpBinding to MonoDevelop.Ide.
	* Makefile.am, MonoDevelop.Ide.mdp: Updated.

2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Track
	  API change. Remove char code translation hack.
	* MonoDevelop.Ide.Gui.Content/TextEditorExtension.cs: Track API change.

2008-04-14  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Add
	  ability for HandleCodeCompletion to alter the trigger word length.
	  Allows completions to 'grab' text behind them, including the
	  character that was typed.

2008-04-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Dom/DomRegion.cs, MonoDevelop.Ide.Dom/DomLocation.cs:
	  Changed the region/location model.

2008-04-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Dom/DomType.cs, MonoDevelop.Ide.Dom/DomMethod.cs,
	  MonoDevelop.Ide.Dom/DomField.cs,
	  MonoDevelop.Ide.Dom/DomProperty.cs: Worked on some dom classes.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads/FileListItem.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Track api changes.

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs: Removed some
	  debug code. 

2008-04-10  Andres G. Aragoneses <aaragoneses@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Improved string
	(redo r66359: http://lists.ximian.com/pipermail/mono-patches/2006-October/081256.html ).

2008-04-10  Mike Krüger <mkrueger@novell.com> 
